--- a/gestao_cliente/home/templates/home.html
+++ b/gestao_cliente/home/templates/home.html
@@ -1,19 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Seja bem vindo</h1>
+{% extends 'base.html' %} 
 
-    {% if user.is_authenticated %}
-        <p>Ola {{ user.username }}</p>
-        <a href="{% url 'logout' %}">Sair</a>
-    {% else %}
-        <a href="{% url 'login' %}">Login</a>
-    {% endif %}
-</body>
-</html>
+{% block title %} Seja bem vindo {% endblock %}
+
+{% block main %}
+<div class="row">
+    <div class="col-3">
+
+    </div>
+    <div class="col-5">
+        <h1>Seja bem vindo</h1>
+    </div>
+    <div class="col-3">
+        {% if user.is_authenticated %}
+            
+            <a href="{% url 'logout' %}" class="btn btn-light">Sair</a>
+        {% else %}
+            <p></p>
+            <a href="{% url 'login' %}" class="btn btn-light">Login</a>
+        {% endif %}
+
+    </div>
+</div>
+
+
+{% endblock %}
